@@ -116,6 +116,8 @@ Bug Fixes
 * SOLR-4863: Removed non-existent attribute sourceId from dynamic JMX stats
   to fix AttributeNotFoundException (suganuma, hossman via shalin)
 
+* SOLR-4855: DistributedUpdateProcessor doesn't check for peer sync requests (shalin)
+
 Other Changes
 ----------------------
 
